# Web-Movie-Database

Website/: Index.html  customer.html  rooms.html  showtimes.html  style.css  theatres.html  tickets.html
backend/: Cargo.toml  Rocket.toml  Select_Update_Delete_queries.sql  data_manipulation_queries.sql  goodmovies.sql
backend/src/: create_tables.rs  customers.rs  main.rs  model.rs  movies.rs  rooms.rs  shared.rs  showings.rs  table_ops.rs  theater.rs  tickets.rs
frontend/: customer.html  index.html  index_better.html  rooms.html
frontend/old_design/: index.html  showtimes.html  style.css  theatres.html  tickets.html
frontend/scripts/: customers.js  getdata.js  movies.js  rooms.js  showings.js  theaters.js  tickets.js
