[package]
name = "backend"
version = "0.1.0"
authors = ["Logan Saso <sasol@oregonstate.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
mysql = "14.0.0"

[dependencies.rocket_contrib]
version = "0.4.2"
features = ["mysql_pool"]
